@@ -346,6 +346,9 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       that are not marked for export are internal and should not be used.
       Usually, that should implicitly be clear, but it doesn't hurt to be
       verbose with a disclaimer.
+    - X2Go/Server/Agent/NX/Options.pm: add extract_element subroutine, used to
+      extract key-value pairs. This one will be exportable, too. Documentation
+      to be done.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
